Added import sql and small changes in view

--- a/src/main/resources/templates/registerForm.html
+++ b/src/main/resources/templates/registerForm.html
@@ -27,7 +27,7 @@
 				<div class="errors" th:errors="*{email}"></div>
 				<input th:field="*{email}" type="email" placeholder="email" /><br />
 				<div class="errors" th:errors="*{password}"></div>
-				<input th:field="*{password}" type="password" placeholder="Hasło" /><br />
+				<input th:field="*{password}" type="password" placeholder="password" /><br />
 				<div class="errors" th:errors="*{pesel}"></div>
 				<input th:field="*{pesel}" placeholder="PESEL" /><br />
 				<input type="submit" value="Sign Up" /><br /><br />
